<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="question_oceans">Oceans are wet</string>
    <string name="question_mideast">everest is in the mideast</string>
    <string name="question_africa">africa\'s lions are blue</string>
    <string name="question_americas">the amazon is a river</string>
    <string name="question_asia">sushi comes from asia</string>
    <string name="previous_button">Previous</string>
    <string name="title_activity_cheat">Cheat</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong</string>

</resources>
